--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,8 @@
   <!-- <meta name="viewport" content="width=device-width, initial-scale=1" /> -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Web site created using create-react-app" />
+  <meta name="description"
+    content="Roma muebles: camas funcionales, respaldos y mesas de luz. Ofrecemos asesoramiento personalizadoy gran variedad de colores y modelos." />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 
@@ -33,7 +34,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>React App</title>
+  <title>Roma muebles</title>
 </head>
 
 <body>
