change navbar position to sticky , change carousel controls and add meta image

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
   <meta name="theme-color" content="#000000" />
   <meta name="description"
     content="Roma muebles: camas funcionales, respaldos y mesas de luz. Ofrecemos asesoramiento personalizadoy gran variedad de colores y modelos." />
-  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+  <meta property="og:image" content="%PUBLIC_URL%/10.jpg" />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 
   <!--
