--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,8 @@
   <meta name="description"
     content="Roma muebles: camas funcionales, respaldos y mesas de luz. Ofrecemos asesoramiento personalizadoy gran variedad de colores y modelos." />
   <meta property="og:image" content="%PUBLIC_URL%/10.jpg" />
+  <meta property="og:image:width" content="550" />
+  <meta property="og:image:height" content="400" />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 
   <!--
