--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
   <meta name="theme-color" content="#000000" />
   <meta name="description"
     content="Roma muebles: camas funcionales, respaldos y mesas de luz. Ofrecemos asesoramiento personalizadoy gran variedad de colores y modelos." />
+  <!-- Open Graph data -->
   <meta property="og:image" content="%PUBLIC_URL%/10.jpg" />
   <meta property="og:image:width" content="550" />
   <meta property="og:image:height" content="400" />
