--- a/public/index.html
+++ b/public/index.html
@@ -3,12 +3,12 @@
 
 <head>
   <meta charset="utf-8" />
-  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+  <link rel="icon" href="%PUBLIC_URL%/10.jpg" />
   <!-- <meta name="viewport" content="width=device-width, initial-scale=1" /> -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="theme-color" content="#000000" />
   <meta name="description"
-    content="Roma muebles: camas funcionales, respaldos y mesas de luz. Ofrecemos asesoramiento personalizadoy gran variedad de colores y modelos." />
+    content="Roma muebles: camas funcionales, respaldos y mesas de luz. Asesoramiento personalizado y gran variedad de colores y modelos." />
   <!-- Open Graph data -->
   <meta property="og:image" content="%PUBLIC_URL%/10.jpg" />
   <meta property="og:image:width" content="550" />
