--- a/public/index.html
+++ b/public/index.html
@@ -7,13 +7,16 @@
   <!-- <meta name="viewport" content="width=device-width, initial-scale=1" /> -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Roma muebles: camas funcionales, respaldos y mesas de luz. 
-    Asesoramiento personalizado y gran variedad de colores y modelos." />
+  <meta name="description" content="Roma muebles: Camas funcionales, respaldos y mesas de luz. 
+    Asesoramiento personalizado y gran variedad de colores y modelos. Zona Oeste: José C. Paz" />
   <!-- Open Graph data -->
-  <meta property="og:image" content="%PUBLIC_URL%/10.jpg" />
+  <meta property="og:title" content="Roma Muebles" />
+  <meta property="og:type" content="company" />
+  <meta property="og:url" content=" http://www.romamuebles.com.ar/" />
+  <meta property="og:image" content="https://www.romamuebles.com.ar/static/media/3.9bd2aa72.jpg" />
   <meta property="og:image:width" content="550" />
   <meta property="og:image:height" content="400" />
-  <meta title="og:title" content="Roma Muebles" />
+
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 
   <!--
