--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,9 @@
   <meta property="og:image:width" content="550" />
   <meta property="og:image:height" content="400" />
 
+  <!-- google google-site-verification -->
+  <meta name="google-site-verification" content="whOqiA4klccG2VOSGstFPeHgbY4sQJd2PPOTK4iwkoc" />
+
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 
   <!--
@@ -42,6 +45,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
   <title>Roma muebles</title>
+
 </head>
 
 <body>
